Updating unit tests and github actions

--- a/.github/workflows/test-objc.yaml
+++ b/.github/workflows/test-objc.yaml
@@ -131,7 +131,7 @@ jobs:
           # https://github.com/actions/virtual-environments/blob/main/images/macos/macos-10.15-Readme.md#package-management 
           brew upgrade carthage
 
-          carthage bootstrap
+          carthage bootstrap --use-xcframeworks
       - name: Run unit tests (Swift 4, macOS)
         if: always()
         run: |
@@ -188,10 +188,10 @@ jobs:
           # https://github.com/actions/virtual-environments/blob/main/images/macos/macos-10.15-Readme.md#package-management 
           brew upgrade carthage
 
-          carthage bootstrap
-      - name: Build Carthage projects - excluding arm64
+          carthage bootstrap --use-xcframeworks
+      - name: Build Carthage projects
         run: |
-          carthage build --no-skip-current
+          carthage build --no-skip-current --use-xcframeworks
 
   project-cocoapods:
     name: CocoaPods project
@@ -269,13 +269,6 @@ jobs:
       - name: Build ObjCThemis for Generic Device (Carthage)
         if: always()
         run: |
-          
-          # Carthage versioning workaround:
-          # Themis requires Carthage version 0.38 and up to use XCF binary dependencies.
-          # Force upgrade is required until newer Carthage version is added to base images:
-          # https://github.com/actions/virtual-environments/blob/main/images/macos/macos-10.15-Readme.md#package-management 
-          brew upgrade carthage
-
           carthage bootstrap --platform iOS
           rm -rf DerivedData
           xcodebuild \
@@ -307,6 +300,21 @@ jobs:
         if: always()
         run: |
           cd $GITHUB_WORKSPACE/docs/examples/objc/iOS-Carthage
+
+          # ------ beginning of workaround
+          # This workaround lives here until we update example projects
+          # from https://github.com/Carthage/Carthage/issues/3019#issuecomment-699143260
+          # supports Xcode 12.0.1
+          set -euo pipefail
+          xcconfig=$(mktemp /tmp/static.xcconfig.XXXXXX)
+          trap 'rm -f "$xcconfig"' INT TERM HUP EXIT
+          # For Xcode 12 make sure EXCLUDED_ARCHS is set to arm architectures otherwise
+          # the build will fail on lipo due to duplicate architectures.
+          echo 'EXCLUDED_ARCHS__EFFECTIVE_PLATFORM_SUFFIX_simulator__NATIVE_ARCH_64_BIT_x86_64__XCODE_1200 = arm64 arm64e armv7 armv7s armv6 armv8' >> $xcconfig
+          echo 'EXCLUDED_ARCHS = $(inherited) $(EXCLUDED_ARCHS__EFFECTIVE_PLATFORM_SUFFIX_$(EFFECTIVE_PLATFORM_SUFFIX)__NATIVE_ARCH_64_BIT_$(NATIVE_ARCH_64_BIT)__XCODE_$(XCODE_VERSION_MAJOR))' >> $xcconfig
+          export XCODE_XCCONFIG_FILE="$xcconfig"          
+          # ------ end of workaround
+
           carthage bootstrap --platform iOS
           rm -rf DerivedData
           xcodebuild \
@@ -320,7 +328,6 @@ jobs:
         if: always()
         run: |
           cd $GITHUB_WORKSPACE/docs/examples/objc/macOS-Carthage
-          brew upgrade carthage
           carthage bootstrap --platform macOS
           rm -rf DerivedData
           xcodebuild \
@@ -348,6 +355,21 @@ jobs:
         if: always()
         run: |
           cd $GITHUB_WORKSPACE/docs/examples/swift/iOS-Carthage
+
+          # ------ beginning of workaround
+          # This workaround lives here until we update example projects
+          # from https://github.com/Carthage/Carthage/issues/3019#issuecomment-699143260
+          # supports Xcode 12.0.1
+          set -euo pipefail
+          xcconfig=$(mktemp /tmp/static.xcconfig.XXXXXX)
+          trap 'rm -f "$xcconfig"' INT TERM HUP EXIT
+          # For Xcode 12 make sure EXCLUDED_ARCHS is set to arm architectures otherwise
+          # the build will fail on lipo due to duplicate architectures.
+          echo 'EXCLUDED_ARCHS__EFFECTIVE_PLATFORM_SUFFIX_simulator__NATIVE_ARCH_64_BIT_x86_64__XCODE_1200 = arm64 arm64e armv7 armv7s armv6 armv8' >> $xcconfig
+          echo 'EXCLUDED_ARCHS = $(inherited) $(EXCLUDED_ARCHS__EFFECTIVE_PLATFORM_SUFFIX_$(EFFECTIVE_PLATFORM_SUFFIX)__NATIVE_ARCH_64_BIT_$(NATIVE_ARCH_64_BIT)__XCODE_$(XCODE_VERSION_MAJOR))' >> $xcconfig
+          export XCODE_XCCONFIG_FILE="$xcconfig"          
+          # ------ end of workaround
+
           carthage bootstrap --platform iOS
           rm -rf DerivedData
           xcodebuild \
