--- a/benches/themis/Cargo.toml
+++ b/benches/themis/Cargo.toml
@@ -9,7 +9,7 @@ themis = { version = "0.13", path = "../../src/wrappers/themis/rust" }
 libthemis-sys = { version = "0.13", path = "../../src/wrappers/themis/rust/libthemis-sys" }
 
 [dev-dependencies]
-criterion = { version = "0.3.4", features = ["cargo_bench_support", "html_reports"]}
+criterion = { version = "0.3.4", features = ["cargo_bench_support", "html_reports"] }
 
 [[bench]]
 name = "secure_cell_seal_master_key"
@@ -17,4 +17,8 @@ harness = false
 
 [[bench]]
 name = "secure_cell_seal_passphrase"
+harness = false
+
+[[bench]]
+name = "secure_cell_token_protect_master_key"
 harness = false
