--- a/benches/themis/Cargo.toml
+++ b/benches/themis/Cargo.toml
@@ -22,3 +22,7 @@ harness = false
 [[bench]]
 name = "secure_cell_token_protect_master_key"
 harness = false
+
+[[bench]]
+name = "secure_cell_context_imprint_master_key"
+harness = false
