--- a/benches/themis/Cargo.toml
+++ b/benches/themis/Cargo.toml
@@ -30,3 +30,7 @@ harness = false
 [[bench]]
 name = "secure_message_encrypt_decrypt_ecdsa"
 harness = false
+
+[[bench]]
+name = "secure_message_encrypt_decrypt_rsa"
+harness = false
