--- a/benches/themis/Cargo.toml
+++ b/benches/themis/Cargo.toml
@@ -42,3 +42,7 @@ harness = false
 [[bench]]
 name = "secure_message_sign_verify_rsa"
 harness = false
+
+[[bench]]
+name = "secure_cell_wrapped_seal_master_key"
+harness = false
