--- a/benches/themis/Cargo.toml
+++ b/benches/themis/Cargo.toml
@@ -50,3 +50,7 @@ harness = false
 [[bench]]
 name = "secure_cell_wrapped_token_protect_master_key"
 harness = false
+
+[[bench]]
+name = "secure_cell_wrapped_context_imprint_master_key"
+harness = false
