--- a/.github/workflows/test-objc.yaml
+++ b/.github/workflows/test-objc.yaml
@@ -119,11 +119,17 @@ jobs:
   unit-tests-carthage:
     name: Unit tests (Carthage)
     runs-on: macos-latest
+    env:
+      GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Check out code
         uses: actions/checkout@v2
       - name: Pull Carthage dependencies
-        run: carthage bootstrap
+        run: |
+          carthage bootstrap --use-xcframeworks
+      - name: Build Carthage projects
+        run: |
+          carthage build --no-skip-current --use-xcframeworks
       - name: Run unit tests (Swift 4, macOS)
         if: always()
         run: |
@@ -168,27 +174,17 @@ jobs:
   project-carthage:
     name: Carthage project
     runs-on: macos-latest
+    env:
+      GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Check out code
         uses: actions/checkout@v2
       - name: Pull Carthage dependencies
-        run: carthage bootstrap
-      - name: Build Carthage projects - excluding arm64
         run: |
-          # ------ beginning of workaround
-          # from https://github.com/Carthage/Carthage/issues/3019#issuecomment-699143260
-          # supports Xcode 12.0.1
-          set -euo pipefail
-          xcconfig=$(mktemp /tmp/static.xcconfig.XXXXXX)
-          trap 'rm -f "$xcconfig"' INT TERM HUP EXIT
-          # For Xcode 12 make sure EXCLUDED_ARCHS is set to arm architectures otherwise
-          # the build will fail on lipo due to duplicate architectures.
-          echo 'EXCLUDED_ARCHS__EFFECTIVE_PLATFORM_SUFFIX_simulator__NATIVE_ARCH_64_BIT_x86_64__XCODE_1200 = arm64 arm64e armv7 armv7s armv6 armv8' >> $xcconfig
-          echo 'EXCLUDED_ARCHS = $(inherited) $(EXCLUDED_ARCHS__EFFECTIVE_PLATFORM_SUFFIX_$(EFFECTIVE_PLATFORM_SUFFIX)__NATIVE_ARCH_64_BIT_$(NATIVE_ARCH_64_BIT)__XCODE_$(XCODE_VERSION_MAJOR))' >> $xcconfig
-          export XCODE_XCCONFIG_FILE="$xcconfig"          
-          # ------ end of workaround
-
-          carthage build --no-skip-current
+          carthage bootstrap --use-xcframeworks
+      - name: Build Carthage projects
+        run: |
+          carthage build --no-skip-current --use-xcframeworks
 
   project-cocoapods:
     name: CocoaPods project
@@ -236,6 +232,8 @@ jobs:
   examples:
     name: Code examples
     runs-on: macos-latest
+    env:
+      GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Check out code
         uses: actions/checkout@v2
@@ -266,7 +264,7 @@ jobs:
       - name: Build ObjCThemis for Generic Device (Carthage)
         if: always()
         run: |
-          carthage bootstrap --platform iOS
+          carthage bootstrap --platform iOS --use-xcframeworks
           rm -rf DerivedData
           xcodebuild \
             -derivedDataPath DerivedData \
@@ -299,6 +297,7 @@ jobs:
           cd $GITHUB_WORKSPACE/docs/examples/objc/iOS-Carthage
 
           # ------ beginning of workaround
+          # This workaround lives here until we update example projects
           # from https://github.com/Carthage/Carthage/issues/3019#issuecomment-699143260
           # supports Xcode 12.0.1
           set -euo pipefail
@@ -312,7 +311,6 @@ jobs:
           # ------ end of workaround
 
           carthage bootstrap --platform iOS
-
           rm -rf DerivedData
           xcodebuild \
             -derivedDataPath DerivedData \
@@ -354,6 +352,7 @@ jobs:
           cd $GITHUB_WORKSPACE/docs/examples/swift/iOS-Carthage
 
           # ------ beginning of workaround
+          # This workaround lives here until we update example projects
           # from https://github.com/Carthage/Carthage/issues/3019#issuecomment-699143260
           # supports Xcode 12.0.1
           set -euo pipefail
