--- a/benches/themis/Cargo.toml
+++ b/benches/themis/Cargo.toml
@@ -54,3 +54,7 @@ harness = false
 [[bench]]
 name = "secure_cell_wrapped_context_imprint_master_key"
 harness = false
+
+[[bench]]
+name = "secure_cell_wrapped_seal_passphrase"
+harness = false
