Uninstall CMake 3.18.1 from Android SDK
Gradle ends up really confused by this CMake version:

    FAILURE: Build failed with an exception.

    * What went wrong:
    Could not determine the dependencies of task ':android:assembleDebug'.
    > A problem occurred configuring project ':boringssl'.
       > Invalid revision: 3.18.1-g262b901

Our builds are fine with older CMake (for now), so let's use that.

--- a/.github/workflows/test-java.yaml
+++ b/.github/workflows/test-java.yaml
@@ -65,6 +65,13 @@ jobs:
     name: Android emulator
     runs-on: macos-latest
     steps:
+      # This particular version of CMake confuses Gradle by not being semver.
+      # We're fine with 3.10.2 which is also installed. Keep an eye on the
+      # virtual environments though:
+      # https://github.com/actions/virtual-environments/blob/main/images/macos/macos-10.15-Readme.md#android
+      - name: Nuke CMake 3.18.1-g262b901
+        run: |
+          ~/Library/Android/sdk/tools/bin/sdkmanager --uninstall 'cmake;3.18.1'
       - name: Check out code
         uses: actions/checkout@v2
         with:
