Pin runner to macos-10.15
GitHub people are working on adding macOS 11 support for Actions and
it's probably going to happen soon. However, I don't really want to be
notified about new and exciting ways to break our builds when that
finally happens, so let's keep using the old environment for now.

--- a/.github/workflows/test-java.yaml
+++ b/.github/workflows/test-java.yaml
@@ -63,7 +63,7 @@ jobs:
 
   android-tests:
     name: Android emulator
-    runs-on: macos-latest
+    runs-on: macos-10.15
     steps:
       # This particular version of CMake confuses Gradle by not being semver.
       # We're fine with 3.10.2 which is also installed. Keep an eye on the
