--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -232,6 +232,19 @@ jobs:
       WITH_FATAL_WARNINGS: yes
       SOTER_KDF_RUN_LONG_TESTS: yes
     steps:
+      # Emergency build hax. I don't have time to rebuild this Docker image properly,
+      # but at the same time want to install a newer Python. CircleCI build is dying
+      # anyway, so run for a while more with this abomination. As long as it's green.
+      - run:
+          name: Add Ubuntu 18.04 repositories
+          command: |
+            cat > bionic.list <<EOF
+            deb http://archive.ubuntu.com/ubuntu  bionic main
+            deb http://archive.ubuntu.com/ubuntu  bionic-updates main
+            deb http://security.ubuntu.com/ubuntu bionic-security main
+            EOF
+            sudo mv bionic.list /etc/apt/sources.list.d
+            sudo chown root:root /etc/apt/sources.list.d/bionic.list
       - run: sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install libssl-dev python python-setuptools python3 python3-setuptools ruby-dev lcov libc6-dbg rsync software-properties-common pkg-config clang afl
       - run: sudo ln -sf /usr/bin/gcov-5 /usr/bin/gcov
       - run: sudo gem install coveralls-lcov
@@ -563,6 +576,19 @@ jobs:
       NO_NIST_STS: 1
       WITH_FATAL_WARNINGS: yes
     steps:
+      # Emergency build hax. I don't have time to rebuild this Docker image properly,
+      # but at the same time want to install a newer Python. CircleCI build is dying
+      # anyway, so run for a while more with this abomination. As long as it's green.
+      - run:
+          name: Add Ubuntu 18.04 repositories
+          command: |
+            cat > bionic.list <<EOF
+            deb http://archive.ubuntu.com/ubuntu  bionic main
+            deb http://archive.ubuntu.com/ubuntu  bionic-updates main
+            deb http://security.ubuntu.com/ubuntu bionic-security main
+            EOF
+            sudo mv bionic.list /etc/apt/sources.list.d
+            sudo chown root:root /etc/apt/sources.list.d/bionic.list
       # dependencies
       - run: sudo apt-get update && sudo DEBIAN_FRONTEND=noninteractive apt-get -y install libssl-dev python python-setuptools python3 python3-setuptools ruby-dev lcov libc6-dbg rsync software-properties-common pkg-config clang
       - run:
