--- a/.github/workflows/test-objc.yaml
+++ b/.github/workflows/test-objc.yaml
@@ -119,6 +119,17 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v2
+      # Work around Carthage braindeath and let it focus on building the project
+      # that actually matters not a gazillion of examples with SPM dependencies.
+      # If these issues get resolved, they might contain a better way:
+      # https://github.com/Carthage/Carthage/issues/3148
+      # https://github.com/Carthage/Carthage/issues/1227
+      - name: Remove Carthage distractions
+        run: |
+          rm -rf docs/examples/objc
+          rm -rf docs/examples/swift
+          rm -rf tests/objcthemis/objcthemis.xcworkspace
+          rm -rf tests/objcthemis/objcthemis.xcodeproj
       - name: Pull Carthage dependencies
         run: |
           carthage bootstrap --use-xcframeworks
@@ -174,6 +185,17 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v2
+      # Work around Carthage braindeath and let it focus on building the project
+      # that actually matters not a gazillion of examples with SPM dependencies.
+      # If these issues get resolved, they might contain a better way:
+      # https://github.com/Carthage/Carthage/issues/3148
+      # https://github.com/Carthage/Carthage/issues/1227
+      - name: Remove Carthage distractions
+        run: |
+          rm -rf docs/examples/objc
+          rm -rf docs/examples/swift
+          rm -rf tests/objcthemis/objcthemis.xcworkspace
+          rm -rf tests/objcthemis/objcthemis.xcodeproj
       - name: Pull Carthage dependencies
         run: |
           carthage bootstrap --use-xcframeworks
