Run GoThemis tests on CI in a modular way
Instead of installing GoThemis and running tests via "make test_go",
run them directly from GoThemis module.

Starting with Go 1.16, the new testing toolchain does not really like
global installation into $GOPATH/src. Just run unit tests for the
module.

Note that "make test_go" keeps its behavior of testing globally
installed GoThemis, if you wish to do so. However, you will need to
explicitly disable modules with GO111MODULE=off and install GoThemis
into GOPATH.

--- a/.github/workflows/test-go.yaml
+++ b/.github/workflows/test-go.yaml
@@ -57,12 +57,8 @@ jobs:
         run: |
           make
           sudo make install
-      - name: Install GoThemis
-        run: |
-          mkdir -p ~/go/src/$GOTHEMIS_IMPORT
-          rsync -auv gothemis/ ~/go/src/$GOTHEMIS_IMPORT
       - name: Run test suite (Go ${{ matrix.go }})
-        run: make test_go
+        run: cd gothemis && go test -v ./...
 
   examples:
     name: Code examples
